autumn/tests/compile-fail/model_on_enum.rs
use autumn::model;

#[model]
enum Status {
    Active,
    Inactive,
}

fn main() {}
